Overlay appears on click

--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -34,7 +34,7 @@ div.image-collage-grid ul {
     position:relative;
 }
 .image-collage-grid .overlay {
-    display:block;
+    display:none;
     position:absolute;
     top:0;
     left:0;
