--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -12,6 +12,8 @@ div.image-collage-grid ul {
 .image-collage-grid li img {
     margin:0;
     padding:0;
+    width:120px;
+    height:120px;
 }
 .image-collage-grid li .quote {
     display:none;
