Basic structure given to overlays

--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -34,13 +34,53 @@ div.image-collage-grid ul {
 }
 .image-collage-grid {
     position:relative;
+    font-family:'arial';
 }
-.image-collage-grid .overlay {
+.image-collage-grid .overlay, .image-collage-overlay-bg {
     display:none;
     position:absolute;
     top:0;
     left:0;
-    background:#6B0103;
-    opacity:0.8;
     color:white;
+}
+.image-collage-overlay-bg {
+    background:#6B0103;
+    height:400px;
+    width:100%;
+    opacity:0.8;
+}
+.image-collage-overlay-right {
+    width:63%;
+    box-sizing:border-box;
+    padding:1em;
+    float:left;
+}
+.image-collage-overlay-left {
+    width:27%;
+    padding:1em;
+    box-sizing:border-box;
+    float:left;
+}
+.image-collage-overlay-left img {
+    width:120px;
+    padding:5px;
+    border-radius:50%;
+    background:white;
+    border:1px solid #ddd;
+    height:120px;
+}
+.image-collage-overlay-thumbnail {
+    display:inline-block;
+    margin-left:auto;
+    margin-right:auto;
+    overflow:hidden;
+}
+span.image-collage-close-button {
+    display:block;
+    background:white;
+    padding:4px;
+    float:right;
+    cursor:pointer;
+    color:#6B0103;
+    
 }
