--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -12,8 +12,15 @@ div.image-collage-grid ul {
 .image-collage-grid li img {
     margin:0;
     padding:0;
-    width:120px;
-    height:120px;
+    width:100px;
+    height:100px;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+}
+.image-collage-grid li img:hover {
+  filter: none;
+  -webkit-filter: grayscale(0%);
 }
 .image-collage-grid li .quote {
     display:none;
@@ -24,9 +31,6 @@ div.image-collage-grid ul {
     top:0;
     left:0;
     background:#6B0103;
-    opacity:0.8;
-    height:96px;
-    width:100%;
     color:white;
     cursor:pointer;
     padding:4px;
