--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -22,19 +22,23 @@ div.image-collage-grid ul {
   filter: none;
   -webkit-filter: grayscale(0%);
 }
-.image-collage-grid li .quote {
+.image-collage-grid li .quote,.image-collage-grid li .quote-bg {
     display:none;
 }
-.image-collage-grid li:hover .quote {
+.image-collage-grid li:hover .quote, .image-collage-grid li:hover .quote-bg {
     display:block;
     position:absolute;
     top:0;
     left:0;
-    background:#6B0103;
+    z-index:200;
     color:white;
-    cursor:pointer;
+    background:transparent;
     padding:4px;
     box-sizing:border-box;
+}
+.image-collage-grid li:hover .quote-bg {
+    opacity:0.8;
+    background:#6B0103;
 }
 .image-collage-grid {
     position:relative;
