--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -35,8 +35,9 @@ div.image-collage-grid ul {
     z-index:200;
     color:white;
     background:transparent;
-    padding:1em;
+    padding:2em 1em;
     font-style:italic;
+    font-weight:bold;
     box-sizing:border-box;
 }
 .image-collage-grid.overlay-inactive li:hover .quote-bg {
@@ -81,12 +82,13 @@ div.image-collage-grid ul {
     float:left;
 }
 .image-collage-overlay-left img {
-    width:160px;
+    width:180px;
     padding:5px;
     border-radius:50%;
+    margin-top:-2em;
     background:white;
     border:1px solid #ddd;
-    height:160px;
+    height:180px;
     margin-left:auto;
     margin-right:auto;
     display:block;
@@ -94,20 +96,27 @@ div.image-collage-grid ul {
 .image-collage-details {
     text-align:center;
 }
+.image-collage-details span {
+    display:block;
+    margin:1em 0;
+}
 .image-collage-name {
     font-weight:bold;
+}
+.image-collage-tagline {
+    font-style:italic;
 }
 .image-collage-overlay-thumbnail {
     display:block;
     margin-left:auto;
     margin-right:auto;
-    overflow:hidden;
 }
 span.image-collage-close-button {
     display:block;
     background:white;
-    padding:4px;
+    padding:10px;
     float:right;
+    font-size:18px;
     cursor:pointer;
     color:#6B0103;
     
