--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -39,6 +39,7 @@ div.image-collage-grid ul {
     font-style:italic;
     font-weight:bold;
     box-sizing:border-box;
+    -moz-box-sizing:border-box;
 }
 .image-collage-grid.overlay-inactive .img-block:hover .quote-bg {
     opacity:0.9;
@@ -72,6 +73,7 @@ div.image-collage-grid ul {
 .image-collage-overlay-right {
     width:63%;
     box-sizing:border-box;
+    -moz-box-sizing:border-box;
     padding:1em;
     float:left;
 }
@@ -79,6 +81,7 @@ div.image-collage-grid ul {
     width:27%;
     padding:1em;
     box-sizing:border-box;
+    -moz-box-sizing:border-box;
     float:left;
 }
 .image-collage-overlay-left img {
