Moved hover state from slide to img-block (fixed weird hover issues)

--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -26,7 +26,7 @@ div.image-collage-grid ul {
 .image-collage-grid li .quote,.image-collage-grid li .quote-bg {
     display:none;
 }
-.image-collage-grid.overlay-inactive .img-block:hover .quote, .image-collage-grid.overlay-inactive li:hover .quote-bg {
+.image-collage-grid.overlay-inactive .img-block:hover .quote, .image-collage-grid.overlay-inactive .img-block:hover .quote-bg {
     display:table-cell;
     vertical-align:middle;
     position:absolute;
