--- a/css/image_collage.css
+++ b/css/image_collage.css
@@ -62,6 +62,10 @@ div#image-collage-grid ul {
 #image-collage-grid .overlay p {
     color:#ffffff;
 }
+#image-collage-grid .overlay  p {
+    margin-top:0;
+    margin-bottom:1em;
+}
 #image-collage-grid .image-collage-overlay-bg {
     z-index:50;
 }
@@ -80,7 +84,7 @@ div#image-collage-grid ul {
     width:63%;
     box-sizing:border-box;
     -moz-box-sizing:border-box;
-    padding:1em;
+    padding:0 1em;
     float:left;
 }
 #image-collage-grid .image-collage-overlay-left {
